Fixes some issues with whitespace

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -80,7 +80,8 @@ code {
   color: white;
   font-family: "Arial";
   font-size: 1.1em;
-  padding-left: 1em; }
+  padding-left: 1em;
+  border: 2px solid #222222; }
 
 div.error, div.notice, div.success {
   padding: 0.8em;
